--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  <link rel="stylesheet" href="css/index.css">
   <!-- CSS do Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
   <!-- ================================================================================================================= -->
-  <link rel="stylesheet" href="css/index.css">
+  
 
   <title>Cantina online</title>
 </head>
@@ -62,7 +62,7 @@
         </div>
       </div>
     </div>
-    <div class="container vantagens" id="#vantagens">
+    <div class="container espaco" id="vantagens">
       <div class="row text-center">
         <h3>Vantagens</h3>
         <div class="col-lg-4">
@@ -84,6 +84,25 @@
           <h5>Antecipe</h5>
           <p>Compre antes da hora do recreio e seja feliz</p>
         </div>
+      </div>
+    </div>
+    <div class="container espaco">
+      <div class="row text-center">
+        <h3>Sua escola</h3>
+          <div class="col-lg-6">
+            <h5>Escola do Bomfim</h5>
+            <img src="img/escola1.jfif" alt="">
+            <p>
+              <button class="btn btn-primary btn-lg">Fazer Login</button>
+            </p>
+          </div>
+          <div class="col-lg-6">
+            <h5>Escola Colorir a Vida</h5>
+            <img src="img/escola2.jfif" alt="">
+            <p>
+              <button class="btn btn-primary btn-lg">Fazer Login</button>
+            </p>
+          </div>
       </div>
     </div>
   </main>
