Mudando para html

--- a/index.html
+++ b/index.html
@@ -93,14 +93,14 @@
           <h5>Escola do Bomfim</h5>
           <img src="img/escola1.jfif" alt="">
           <p>
-            <a href="login.php"><button class="btn btn-primary btn-lg">Fazer Login</button></a>
+            <a href="login.html"><button class="btn btn-primary btn-lg">Fazer Login</button></a>
           </p>
         </div>
         <div class="col-lg-6">
           <h5>Escola Colorir a Vida</h5>
           <img src="img/escola2.jfif" alt="">
           <p>
-            <a href="login.php"><button class="btn btn-primary btn-lg">Fazer Login</button></a>
+            <a href="login.html"><button class="btn btn-primary btn-lg">Fazer Login</button></a>
           </p>
         </div>
       </div>
