Colocando a parte de produtos

--- a/homeCantina.html
+++ b/homeCantina.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/index.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
   <title>Cantina Online - Cantina</title>
@@ -35,7 +36,51 @@
       </div>
     </nav>
   </header>
-  
+  <main>
+    <div class="container espaco">
+      <div class="row text-center">
+        <h2>Produtos</h2>
+        <div class="card col-lg-3" style="width: 18rem;">
+          <img src="img/comida/hamburguer.jpg" class="card-img-top" alt="..." width="50%" height="50%">
+          <div class="card-body">
+            <h5 class="card-title">Hamburgão da Tia Sônia</h5>
+            <h5 class="card-title">R$ 5,00</h5>
+            <p>Ingredientes:</p>
+            <p class="card-text">Pão vegano, Carne vegana, Tomate vegano, Alface vegano</p>
+            <a href="" class="btn btn-primary">Editar</a>
+            <a href="" class="btn btn-danger">Excluir</a>
+          </div>
+        </div>
+        <div class="card col-lg-3" style="width: 18rem;">
+          <img src="img/comida/hamburguer.jpg" class="card-img-top" alt="..." width="50%" height="50%">
+          <div class="card-body">
+            <h5 class="card-title">Hamburgão da Tia Tânia</h5>
+            <h5 class="card-title">R$ 5,00</h5>
+            <p>Ingredientes:</p>
+            <p class="card-text">Pão vegano, Carne vegana, Tomate vegano, Alface vegano</p>
+            <a href="" class="btn btn-primary">Editar</a>
+            <a href="" class="btn btn-danger">Excluir</a>
+          </div>
+        </div>
+        <div class="card col-lg-3" style="width: 18rem;">
+          <img src="img/comida/hamburguer.jpg" class="card-img-top" alt="..." width="50%" height="50%">
+          <div class="card-body">
+            <h5 class="card-title">Hamburgão da Tia Sônia Vegano</h5>
+            <h5 class="card-title">R$ 5,00</h5>
+            <p>Ingredientes:</p>
+            <p class="card-text">Pão vegano, Carne vegana, Tomate vegano, Alface vegano</p>
+            <a href="" class="btn btn-primary">Editar</a>
+            <a href="" class="btn btn-danger">Excluir</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container espaco">
+      <div class="row text-center">
+        <h2>Responsáveis</h2>
+      </div>
+    </div>
+  </main>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
