--- a/homeCantina.html
+++ b/homeCantina.html
@@ -73,6 +73,39 @@
             <a href="" class="btn btn-danger">Excluir</a>
           </div>
         </div>
+        <div class="card col-lg-3" style="width: 18rem;">
+          <img src="img/bebida/Bebida.png" class="card-img-top" alt="..." width="50%" height="50%">
+          <div class="card-body">
+            <h5 class="card-title">Hamburgão da Tia Sônia Vegano</h5>
+            <h5 class="card-title">R$ 5,00</h5>
+            <p>Ingredientes:</p>
+            <p class="card-text">Pão vegano, Carne vegana, Tomate vegano, Alface vegano</p>
+            <a href="" class="btn btn-primary">Editar</a>
+            <a href="" class="btn btn-danger">Excluir</a>
+          </div>
+        </div>
+        <div class="card col-lg-3" style="width: 18rem;">
+          <img src="img/bebida/Bebida.png" class="card-img-top" alt="..." width="50%" height="50%">
+          <div class="card-body">
+            <h5 class="card-title">Hamburgão da Tia Sônia Vegano</h5>
+            <h5 class="card-title">R$ 5,00</h5>
+            <p>Ingredientes:</p>
+            <p class="card-text">Pão vegano, Carne vegana, Tomate vegano, Alface vegano</p>
+            <a href="" class="btn btn-primary">Editar</a>
+            <a href="" class="btn btn-danger">Excluir</a>
+          </div>
+        </div>
+        <div class="card col-lg-3" style="width: 18rem;">
+          <img src="img/bebida/Bebida.png" class="card-img-top" alt="..." width="50%" height="50%">
+          <div class="card-body">
+            <h5 class="card-title">Hamburgão da Tia Sônia Vegano</h5>
+            <h5 class="card-title">R$ 5,00</h5>
+            <p>Ingredientes:</p>
+            <p class="card-text">Pão vegano, Carne vegana, Tomate vegano, Alface vegano</p>
+            <a href="" class="btn btn-primary">Editar</a>
+            <a href="" class="btn btn-danger">Excluir</a>
+          </div>
+        </div>
       </div>
     </div>
     <div class="container espaco">
