Concertando as informaçoes dos produtos

--- a/homeCantina.html
+++ b/homeCantina.html
@@ -43,21 +43,10 @@
         <div class="card col-lg-3" style="width: 18rem;">
           <img src="img/comida/hamburguer.jpg" class="card-img-top" alt="..." width="50%" height="50%">
           <div class="card-body">
-            <h5 class="card-title">Hamburgão da Tia Sônia</h5>
-            <h5 class="card-title">R$ 5,00</h5>
-            <p>Ingredientes:</p>
-            <p class="card-text">Pão vegano, Carne vegana, Tomate vegano, Alface vegano</p>
-            <a href="" class="btn btn-primary">Editar</a>
-            <a href="" class="btn btn-danger">Excluir</a>
-          </div>
-        </div>
-        <div class="card col-lg-3" style="width: 18rem;">
-          <img src="img/comida/hamburguer.jpg" class="card-img-top" alt="..." width="50%" height="50%">
-          <div class="card-body">
             <h5 class="card-title">Hamburgão da Tia Tânia</h5>
             <h5 class="card-title">R$ 5,00</h5>
-            <p>Ingredientes:</p>
-            <p class="card-text">Pão vegano, Carne vegana, Tomate vegano, Alface vegano</p>
+            <p><strong>Código</strong>: 0001</p>
+            <p class="card-text"><strong>Ingredientes</strong>: Pão, Carne, Tomate, Alface</p>
             <a href="" class="btn btn-primary">Editar</a>
             <a href="" class="btn btn-danger">Excluir</a>
           </div>
@@ -65,10 +54,21 @@
         <div class="card col-lg-3" style="width: 18rem;">
           <img src="img/comida/hamburguer.jpg" class="card-img-top" alt="..." width="50%" height="50%">
           <div class="card-body">
-            <h5 class="card-title">Hamburgão da Tia Sônia Vegano</h5>
-            <h5 class="card-title">R$ 5,00</h5>
-            <p>Ingredientes:</p>
-            <p class="card-text">Pão vegano, Carne vegana, Tomate vegano, Alface vegano</p>
+            <h5 class="card-title">Hamburgão da Tia Tânia de Frango</h5>
+            <h5 class="card-title">R$ 7,00</h5>
+            <p><strong>Código</strong>: 0002</p>
+            <p class="card-text"><strong>Ingredientes</strong>: Pão, Frango, Tomate, Alface</p>
+            <a href="" class="btn btn-primary">Editar</a>
+            <a href="" class="btn btn-danger">Excluir</a>
+          </div>
+        </div>
+        <div class="card col-lg-3" style="width: 18rem;">
+          <img src="img/comida/hamburguer.jpg" class="card-img-top" alt="..." width="50%" height="50%">
+          <div class="card-body">
+            <h5 class="card-title">Hamburgão da Tia Tânia Vegan</h5>
+            <h5 class="card-title">R$ 10,00</h5>
+            <p><strong>Código</strong>: 0003</p>
+            <p class="card-text"><strong>Ingredientes</strong>: Pão vegano, Carne vegana, Tomate vegano, Alface vegano</p>
             <a href="" class="btn btn-primary">Editar</a>
             <a href="" class="btn btn-danger">Excluir</a>
           </div>
@@ -76,10 +76,10 @@
         <div class="card col-lg-3" style="width: 18rem;">
           <img src="img/bebida/Bebida.png" class="card-img-top" alt="..." width="50%" height="50%">
           <div class="card-body">
-            <h5 class="card-title">Hamburgão da Tia Sônia Vegano</h5>
-            <h5 class="card-title">R$ 5,00</h5>
-            <p>Ingredientes:</p>
-            <p class="card-text">Pão vegano, Carne vegana, Tomate vegano, Alface vegano</p>
+            <h5 class="card-title">Água</h5>
+            <h5 class="card-title">R$ 1,00</h5>
+            <p><strong>Código</strong>: 0004</p>
+            <p class="card-text"><strong>Fornecedor</strong>: Agua Vida Fornecedoras</p>
             <a href="" class="btn btn-primary">Editar</a>
             <a href="" class="btn btn-danger">Excluir</a>
           </div>
@@ -87,10 +87,10 @@
         <div class="card col-lg-3" style="width: 18rem;">
           <img src="img/bebida/Bebida.png" class="card-img-top" alt="..." width="50%" height="50%">
           <div class="card-body">
-            <h5 class="card-title">Hamburgão da Tia Sônia Vegano</h5>
+            <h5 class="card-title">Fanta</h5>
             <h5 class="card-title">R$ 5,00</h5>
-            <p>Ingredientes:</p>
-            <p class="card-text">Pão vegano, Carne vegana, Tomate vegano, Alface vegano</p>
+            <p><strong>Código</strong>: 0005</p>
+            <p class="card-text"><strong>Fornecedor</strong>: Fanta Fornecedora</p>
             <a href="" class="btn btn-primary">Editar</a>
             <a href="" class="btn btn-danger">Excluir</a>
           </div>
@@ -98,10 +98,10 @@
         <div class="card col-lg-3" style="width: 18rem;">
           <img src="img/bebida/Bebida.png" class="card-img-top" alt="..." width="50%" height="50%">
           <div class="card-body">
-            <h5 class="card-title">Hamburgão da Tia Sônia Vegano</h5>
+            <h5 class="card-title">Pepsi</h5>
             <h5 class="card-title">R$ 5,00</h5>
-            <p>Ingredientes:</p>
-            <p class="card-text">Pão vegano, Carne vegana, Tomate vegano, Alface vegano</p>
+            <p><strong>Código</strong>: 0006</p>
+            <p class="card-text"><strong>Fornecedor</strong>: Pepsi Fonercedora</p>
             <a href="" class="btn btn-primary">Editar</a>
             <a href="" class="btn btn-danger">Excluir</a>
           </div>
