Adcionando botao adicionar produto com açao

--- a/homeCantina.html
+++ b/homeCantina.html
@@ -47,6 +47,7 @@
             <h5 class="card-title">R$ 5,00</h5>
             <p><strong>Código</strong>: 0001</p>
             <p class="card-text"><strong>Ingredientes</strong>: Pão, Carne, Tomate, Alface</p>
+            <p><strong>Status</strong>: Desbloqueado</p>
             <a href="" class="btn btn-primary">Editar</a>
             <a href="" class="btn btn-danger">Excluir</a>
           </div>
@@ -58,6 +59,7 @@
             <h5 class="card-title">R$ 7,00</h5>
             <p><strong>Código</strong>: 0002</p>
             <p class="card-text"><strong>Ingredientes</strong>: Pão, Frango, Tomate, Alface</p>
+            <p><strong>Status</strong>: Bloquado</p>
             <a href="" class="btn btn-primary">Editar</a>
             <a href="" class="btn btn-danger">Excluir</a>
           </div>
@@ -68,7 +70,9 @@
             <h5 class="card-title">Hamburgão da Tia Tânia Vegan</h5>
             <h5 class="card-title">R$ 10,00</h5>
             <p><strong>Código</strong>: 0003</p>
-            <p class="card-text"><strong>Ingredientes</strong>: Pão vegano, Carne vegana, Tomate vegano, Alface vegano</p>
+            <p class="card-text"><strong>Ingredientes</strong>: Pão vegano, Carne vegana, Tomate vegano, Alface vegano
+            </p>
+            <p><strong>Status</strong>: Bloquado</p>
             <a href="" class="btn btn-primary">Editar</a>
             <a href="" class="btn btn-danger">Excluir</a>
           </div>
@@ -80,6 +84,7 @@
             <h5 class="card-title">R$ 1,00</h5>
             <p><strong>Código</strong>: 0004</p>
             <p class="card-text"><strong>Fornecedor</strong>: Agua Vida Fornecedoras</p>
+            <p><strong>Status</strong>: Bloquado</p>
             <a href="" class="btn btn-primary">Editar</a>
             <a href="" class="btn btn-danger">Excluir</a>
           </div>
@@ -91,6 +96,7 @@
             <h5 class="card-title">R$ 5,00</h5>
             <p><strong>Código</strong>: 0005</p>
             <p class="card-text"><strong>Fornecedor</strong>: Fanta Fornecedora</p>
+            <p><strong>Status</strong>: Bloquado</p>
             <a href="" class="btn btn-primary">Editar</a>
             <a href="" class="btn btn-danger">Excluir</a>
           </div>
@@ -102,8 +108,25 @@
             <h5 class="card-title">R$ 5,00</h5>
             <p><strong>Código</strong>: 0006</p>
             <p class="card-text"><strong>Fornecedor</strong>: Pepsi Fonercedora</p>
+            <p><strong>Status</strong>: Desbloqueado</p>
             <a href="" class="btn btn-primary">Editar</a>
             <a href="" class="btn btn-danger">Excluir</a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Botão de adicionar --> 
+      <div class="row text-center" style="margin-top: 20px;">
+        <button class="btn btn-success" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop"
+          aria-controls="offcanvasTop">Adicionar Produto</button>
+
+        <div class="offcanvas offcanvas-top" tabindex="-1" id="offcanvasTop" aria-labelledby="offcanvasTopLabel">
+          <div class="offcanvas-header">
+            <h5 id="offcanvasTopLabel">Adicionar Produto</h5>
+            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+          </div>
+          <div class="offcanvas-body">
+            ...
           </div>
         </div>
       </div>
