--- a/login.html
+++ b/login.html
@@ -7,10 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="css/login.css">
-    <title>Document</title>
+    <title>Login</title>
 </head>
 
 <body>
+
+    <header>     
+        <ul class="nav justify-content-center">
+            <div>                
+                <img src="img/cantina-web.png" alt="" width="100" height="100" class="d-inline-block align-text-top">
+        </ul>  
+            
+    </header>
 
     <main class="container text-center">
         <form action="">
