ajeitando os links dos hrefs

--- a/extract.html
+++ b/extract.html
@@ -21,13 +21,13 @@
             </a>
             <ul class="nav justify-content-center">
               <li class="nav-item">
-                <a class="nav-link" href="/student.html">Comprar</a>
+                <a class="nav-link" href="student.html">Comprar</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/saldo.html">Saldo</a>
+                <a class="nav-link" href="saldo.html">Saldo</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/extract.html">Extrato</a>
+                <a class="nav-link" href="extract.html">Extrato</a>
               </li>
             </ul>
           </div>
