--- a/homeCantina.html
+++ b/homeCantina.html
@@ -118,22 +118,205 @@
       <!-- Botão de adicionar --> 
       <div class="row text-center" style="margin-top: 20px;">
         <button class="btn btn-success" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop"
-          aria-controls="offcanvasTop">Adicionar Produto</button>
+          aria-controls="offcanvasTop">Adicionar Comida</button>
 
         <div class="offcanvas offcanvas-top" tabindex="-1" id="offcanvasTop" aria-labelledby="offcanvasTopLabel">
           <div class="offcanvas-header">
-            <h5 id="offcanvasTopLabel">Adicionar Produto</h5>
+            <h5 id="offcanvasTopLabel">Cadastro Comida</h5>
             <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
           <div class="offcanvas-body">
-            ...
+            <div class="row text-center">
+              <div class="col-lg-3">
+                <div class="mb-3">
+                  <label for="codigoForm" class="form-label">Código</label>
+                  <input type="number" class="form-control" id="codigoForm">
+                </div>
+              </div>
+              <div class="col-lg-3">
+                <div class="mb-3">
+                  <label for="nomeForm" class="form-label">Nome</label>
+                  <input type="text" class="form-control" id="nomeForm">
+                </div>
+              </div>
+              <div class="col-lg-3">
+                <div class="mb-3">
+                  <label for="ingredienteForm" class="form-label">Ingredientes</label>
+                  <input type="text" class="form-control" id="ingredienteForm">
+                </div>
+              </div>
+              <div class="col-lg-3">
+                <div class="mb-3">
+                  <label for="precoForm" class="form-label">Preço</label>
+                  <input type="text" class="form-control" id="precoForm">
+                </div>
+              </div>
+              <div class="col-lg-3">
+                <div class="mb-3">
+                  <label for="imagemForm" class="form-label">Imagem</label>
+                  <input type="file" class="form-control" id="imagemForm">
+                </div>
+              </div>
+              <div class="col-lg-3">
+                <div class="mb-3">
+                  <input type="submit" class="form-control btn btn-success" id="nomeForm" value="Enviar">
+                </div>
+              </div>
+            </div>
           </div>
         </div>
+
+        <p></p>
+
+        <button class="btn btn-success" type="button" data-bs-toggle="offcanvas" data-bs-target="#bebidaButton"
+          aria-controls="offcanvasTop">Adicionar Bebida</button>
+
+        <div class="offcanvas offcanvas-top" tabindex="-1" id="bebidaButton" aria-labelledby="offcanvasTopLabel">
+          <div class="offcanvas-header">
+            <h5 id="offcanvasTopLabel">Cadastro Bebida</h5>
+            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+          </div>
+          <div class="offcanvas-body">
+            <div class="row text-center">
+              <div class="col-lg-3">
+                <div class="mb-3">
+                  <label for="codigoForm" class="form-label">Código</label>
+                  <input type="number" class="form-control" id="codigoForm">
+                </div>
+              </div>
+              <div class="col-lg-3">
+                <div class="mb-3">
+                  <label for="nomeForm" class="form-label">Nome</label>
+                  <input type="text" class="form-control" id="nomeForm">
+                </div>
+              </div>
+              <div class="col-lg-3">
+                <div class="mb-3">
+                  <label for="fornecedorForm" class="form-label">Fornecedor</label>
+                  <input type="text" class="form-control" id="forcenedorForm">
+                </div>
+              </div>
+              <div class="col-lg-3">
+                <div class="mb-3">
+                  <label for="precoForm" class="form-label">Preço</label>
+                  <input type="text" class="form-control" id="precoForm">
+                </div>
+              </div>
+              <div class="col-lg-3">
+                <div class="mb-3">
+                  <label for="imagemForm" class="form-label">Imagem</label>
+                  <input type="file" class="form-control" id="imagemForm">
+                </div>
+              </div>
+              <div class="col-lg-3">
+                <div class="mb-3">
+                  <input type="submit" class="form-control btn btn-success" id="nomeForm" value="Enviar">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
     <div class="container espaco">
       <div class="row text-center">
         <h2>Responsáveis</h2>
+
+        <div class="table-responsive">
+          <table class="table table-striped table-sm">
+            <thead>
+              <tr>
+                <th scope="col">CPF</th>
+                <th scope="col">Nome</th>
+                <th scope="col">Telefone</th>
+                <th scope="col">Email</th>
+                <th scope="col"></th>
+                <th scope="col"></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>908.931.900-04</td>
+                <td>Leandro Joaquim Silveira</td>
+                <td>(83) 3669-9162</td>
+                <td>leandrojoaquimsilveira@alvesbarcelos.com.br</td>
+                <td><a href="" class="btn btn-primary">Editar</a></td>
+                <td><a href="" class="btn btn-danger">Excluir</a></td>
+              </tr>
+              <tr>
+                <td>908.931.900-04</td>
+                <td>Leandro Joaquim Silveira</td>
+                <td>(83) 3669-9162</td>
+                <td>leandrojoaquimsilveira@alvesbarcelos.com.br</td>
+                <td><a href="" class="btn btn-primary">Editar</a></td>
+                <td><a href="" class="btn btn-danger">Excluir</a></td>
+              </tr>
+              <tr>
+                <td>908.931.900-04</td>
+                <td>Leandro Joaquim Silveira</td>
+                <td>(83) 3669-9162</td>
+                <td>leandrojoaquimsilveira@alvesbarcelos.com.br</td>
+                <td><a href="" class="btn btn-primary">Editar</a></td>
+                <td><a href="" class="btn btn-danger">Excluir</a></td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <p></p>
+        <button class="btn btn-success" type="button" data-bs-toggle="offcanvas" data-bs-target="#responsavelButton"
+          aria-controls="offcanvasTop">Adicionar Responsável</button>
+
+        <div class="offcanvas offcanvas-top" tabindex="-1" id="responsavelButton" aria-labelledby="offcanvasTopLabel">
+          <div class="offcanvas-header">
+            <h5 id="offcanvasTopLabel">Cadastro Responsável</h5>
+            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+          </div>
+          <div class="offcanvas-body">
+            <div class="row text-center">
+              <div class="col-lg-3">
+                <div class="mb-3">
+                  <label for="codigoForm" class="form-label">CPF</label>
+                  <input type="number" class="form-control" id="codigoForm">
+                </div>
+              </div>
+              <div class="col-lg-3">
+                <div class="mb-3">
+                  <label for="nomeForm" class="form-label">Nome</label>
+                  <input type="text" class="form-control" id="nomeForm">
+                </div>
+              </div>
+              <div class="col-lg-3">
+                <div class="mb-3">
+                  <label for="fornecedorForm" class="form-label">Telefone</label>
+                  <input type="text" class="form-control" id="forcenedorForm">
+                </div>
+              </div>
+              <div class="col-lg-3">
+                <div class="mb-3">
+                  <label for="precoForm" class="form-label">Email</label>
+                  <input type="email" class="form-control" id="precoForm">
+                </div>
+              </div>
+              <div class="col-lg-3">
+                <div class="mb-3">
+                  <label for="imagemForm" class="form-label">Login</label>
+                  <input type="text" class="form-control" id="imagemForm">
+                </div>
+              </div>
+              <div class="col-lg-3">
+                <div class="mb-3">
+                  <label for="imagemForm" class="form-label">Senha</label>
+                  <input type="password" class="form-control" id="imagemForm">
+                </div>
+              </div>
+              <div class="col-lg-3">
+                <div class="mb-3">
+                  <input type="submit" class="form-control btn btn-success" id="nomeForm" value="Enviar">
+                </div>
+              </div>
+            </div>
+          </div>
       </div>
     </div>
   </main>
