--- a/homeCantina.html
+++ b/homeCantina.html
@@ -319,6 +319,40 @@
           </div>
       </div>
     </div>
+    
+    <div class="container espaco">
+      <div class="row text-center">
+        <h2>Saldo Alunos</h2>
+        <div class="table-responsive">
+          <table class="table table-striped table-sm">
+            <thead>
+              <tr>
+                <th scope="col">Matricula</th>
+                <th scope="col">Nome</th>
+                <th scope="col">Saldo</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>2651561</td>
+                <td>José Cirquera Silva</td>
+                <td>R$ 20,00</td>
+              </tr>
+              <tr>
+                <td>2651561</td>
+                <td>José Cirquera Silva</td>
+                <td>R$ 20,00</td>
+              </tr>
+              <tr>
+                <td>2651561</td>
+                <td>José Cirquera Silva</td>
+                <td>R$ 20,00</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
   </main>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
