--- a/Cantina/Produtos.html
+++ b/Cantina/Produtos.html
@@ -44,8 +44,8 @@
             <p><strong>Código</strong>: 0001</p>
             <p class="card-text"><strong>Ingredientes</strong>: Pão, Carne, Tomate, Alface</p>
             <p><strong>Status</strong>: Desbloqueado</p>
-            <a href="" class="btn btn-primary">Editar</a>
-            <a href="" class="btn btn-danger">Excluir</a>
+            <a href="" class="btn btn-primary editar">Editar</a>
+            <a href="" class="btn btn-danger excluir">Excluir</a>
           </div>
         </div>
         <div class="card col-lg-3" style="width: 18rem;">
@@ -56,8 +56,8 @@
             <p><strong>Código</strong>: 0002</p>
             <p class="card-text"><strong>Ingredientes</strong>: Pão, Frango, Tomate, Alface</p>
             <p><strong>Status</strong>: Bloquado</p>
-            <a href="" class="btn btn-primary">Editar</a>
-            <a href="" class="btn btn-danger">Excluir</a>
+            <a href="" class="btn btn-primary editar">Editar</a>
+            <a href="" class="btn btn-danger excluir">Excluir</a>
           </div>
         </div>
         <div class="card col-lg-3" style="width: 18rem;">
@@ -69,8 +69,8 @@
             <p class="card-text"><strong>Ingredientes</strong>: Pão vegano, Carne vegana, Tomate vegano, Alface vegano
             </p>
             <p><strong>Status</strong>: Bloquado</p>
-            <a href="" class="btn btn-primary">Editar</a>
-            <a href="" class="btn btn-danger">Excluir</a>
+            <a href="" class="btn btn-primary editar">Editar</a>
+            <a href="" class="btn btn-danger excluir">Excluir</a>
           </div>
         </div>
         <div class="card col-lg-3" style="width: 18rem;">
@@ -81,8 +81,8 @@
             <p><strong>Código</strong>: 0004</p>
             <p class="card-text"><strong>Fornecedor</strong>: Agua Vida Fornecedoras</p>
             <p><strong>Status</strong>: Bloquado</p>
-            <a href="" class="btn btn-primary">Editar</a>
-            <a href="" class="btn btn-danger">Excluir</a>
+            <a href="" class="btn btn-primary editar">Editar</a>
+            <a href="" class="btn btn-danger excluir">Excluir</a>
           </div>
         </div>
         <div class="card col-lg-3" style="width: 18rem;">
@@ -93,8 +93,8 @@
             <p><strong>Código</strong>: 0005</p>
             <p class="card-text"><strong>Fornecedor</strong>: Fanta Fornecedora</p>
             <p><strong>Status</strong>: Bloquado</p>
-            <a href="" class="btn btn-primary">Editar</a>
-            <a href="" class="btn btn-danger">Excluir</a>
+            <a href="" class="btn btn-primary editar">Editar</a>
+            <a href="" class="btn btn-danger excluir">Excluir</a>
           </div>
         </div>
         <div class="card col-lg-3" style="width: 18rem;">
@@ -105,8 +105,8 @@
             <p><strong>Código</strong>: 0006</p>
             <p class="card-text"><strong>Fornecedor</strong>: Pepsi Fonercedora</p>
             <p><strong>Status</strong>: Desbloqueado</p>
-            <a href="" class="btn btn-primary">Editar</a>
-            <a href="" class="btn btn-danger">Excluir</a>
+            <button class="btn btn-primary editar" id="test">Editar</button>
+            <button class="btn btn-danger excluir">Excluir</button>
           </div>
         </div>
       </div>
@@ -216,6 +216,7 @@
     </div>
   </main>
 
+  <script src="../js/Cantina/produtos.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
     crossorigin="anonymous"></script>
