--- a/Cantina/Produtos.html
+++ b/Cantina/Produtos.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../css/index.css">
+  <link rel="stylesheet" href="../public/css/index.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
   <title>Cantina Online - Cantina</title>
@@ -16,7 +16,7 @@
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="">
-          <img src="../img/cantina-web.png" alt="" width="100" height="100" class="d-inline-block align-text-top">
+          <img src="../public/img/cantina-web.png" alt="" width="100" height="100" class="d-inline-block align-text-top">
         </a>
         <ul class="nav justify-content-center">
           <li class="nav-item">
@@ -37,7 +37,7 @@
       <div class="row text-center">
         <h2>Produtos</h2>
         <div class="card col-lg-3" style="width: 18rem;">
-          <img src="../img/comida/hamburguer.jpg" class="card-img-top" alt="..." width="50%" height="50%">
+          <img src="../public/img/comida/hamburguer.jpg" class="card-img-top" alt="..." width="50%" height="50%">
           <div class="card-body">
             <h5 class="card-title">Hamburgão da Tia Tânia</h5>
             <h5 class="card-title">R$ 5,00</h5>
@@ -49,7 +49,7 @@
           </div>
         </div>
         <div class="card col-lg-3" style="width: 18rem;">
-          <img src="../img/comida/hamburguer.jpg" class="card-img-top" alt="..." width="50%" height="50%">
+          <img src="../public/img/comida/hamburguer.jpg" class="card-img-top" alt="..." width="50%" height="50%">
           <div class="card-body">
             <h5 class="card-title">Hamburgão da Tia Tânia de Frango</h5>
             <h5 class="card-title">R$ 7,00</h5>
@@ -61,7 +61,7 @@
           </div>
         </div>
         <div class="card col-lg-3" style="width: 18rem;">
-          <img src="../img/comida/hamburguer.jpg" class="card-img-top" alt="..." width="50%" height="50%">
+          <img src="../public/img/comida/hamburguer.jpg" class="card-img-top" alt="..." width="50%" height="50%">
           <div class="card-body">
             <h5 class="card-title">Hamburgão da Tia Tânia Vegan</h5>
             <h5 class="card-title">R$ 10,00</h5>
@@ -74,7 +74,7 @@
           </div>
         </div>
         <div class="card col-lg-3" style="width: 18rem;">
-          <img src="../img/bebida/Bebida.png" class="card-img-top" alt="..." width="50%" height="50%">
+          <img src="../public/img/bebida/Bebida.png" class="card-img-top" alt="..." width="50%" height="50%">
           <div class="card-body">
             <h5 class="card-title">Água</h5>
             <h5 class="card-title">R$ 1,00</h5>
@@ -86,7 +86,7 @@
           </div>
         </div>
         <div class="card col-lg-3" style="width: 18rem;">
-          <img src="../img/bebida/Bebida.png" class="card-img-top" alt="..." width="50%" height="50%">
+          <img src="../public/img/bebida/Bebida.png" class="card-img-top" alt="..." width="50%" height="50%">
           <div class="card-body">
             <h5 class="card-title">Fanta</h5>
             <h5 class="card-title">R$ 5,00</h5>
@@ -98,7 +98,7 @@
           </div>
         </div>
         <div class="card col-lg-3" style="width: 18rem;">
-          <img src="../img/bebida/Bebida.png" class="card-img-top" alt="..." width="50%" height="50%">
+          <img src="../public/img/bebida/Bebida.png" class="card-img-top" alt="..." width="50%" height="50%">
           <div class="card-body">
             <h5 class="card-title">Pepsi</h5>
             <h5 class="card-title">R$ 5,00</h5>
