--- a/Estudante/Extrato.html
+++ b/Estudante/Extrato.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="../public/css/index.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
   <title>Extrato</title>
@@ -17,17 +17,14 @@
         <nav class="navbar navbar-expand-sm navbar-light bg-light">
           <div class="container-fluid">
             <a class="navbar-brand" href="">
-              <img src="img/cantina-web.png" alt="" width="100" height="100" class="d-inline-block align-text-top">
+              <img src="../public/img/cantina-web.png" alt="" width="100" height="100" class="d-inline-block align-text-top">
             </a>
             <ul class="nav justify-content-center">
               <li class="nav-item">
-                <a class="nav-link" href="student.html">Comprar</a>
+                <a class="nav-link" href="HomeEstudante.html">Comprar</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="saldo.html">Saldo</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="extract.html">Extrato</a>
+                <a class="nav-link disabled" href="Extrato.html">Extrato</a>
               </li>
             </ul>
           </div>
