--- a/Estudante/HomeEstudante.html
+++ b/Estudante/HomeEstudante.html
@@ -166,6 +166,7 @@
           <table class="table table-striped table-sm">
             <thead>
               <tr>
+                <th scope="col">Total</th>
                 <th scope="col">Nome</th>
                 <th scope="col">Preço</th>
                 <th scope="col"></th>
@@ -173,14 +174,22 @@
             </thead>
             <tbody>
               <tr>
+                <td></td>
                 <td>Hamburgão da Tia Tânia</td>
                 <td>R$ 5,00</td>
                 <td><a href="" class="btn btn-danger">Excluir</a></td>
               </tr>
               <tr>
+                <td></td>
                 <td>Água</td>
                 <td>R$ 2,00</td>
                 <td><a href="" class="btn btn-danger">Excluir</a></td>
+              </tr>
+              <tr>
+                <td>R$ 7,00</td>
+                <td></td>
+                <td></td>
+                <td></td>
               </tr>
             </tbody>
           </table>
